Setup Boid movement

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 bevy = { version = "0.16.1", features = ["dynamic_linking"] }
 bevy_dev_tools = "0.16.1"
+rand = "0.9.2"
 
 [profile.dev]
 opt-level = 1
